@@ -37,6 +37,8 @@ Version 3.1.0 - SVN
    from DomJudge@FAU.
  - Added AWK, C# and Python language support.
  - Added upgrade support for the SQL database.
+ - In chroot-startstop, cope properly with /lib64 being a symlink to
+   /lib. Thanks Christoph Dittmann.
 
 Version 3.0.0 Release Candidate 2 - 3 September 2009
 ----------------------------------------------------
